# CS236

./: README.md
project-0-harrisonoakess/: .pre-commit-config.yaml  README.md  pyproject.toml
project-0-harrisonoakess/.devcontainer/: devcontainer.json
project-0-harrisonoakess/src/project0/: project0.py
project-0-harrisonoakess/test/: passoff_utils.py  test_passoff_100.py  test_passoff_80.py  test_project0.py
project-0-harrisonoakess/test/resources/project0-passoff/100/: answer0.txt  input0.txt
project-0-harrisonoakess/test/resources/project0-passoff/80/: answer0.txt  answer1.txt  answer2.txt  input0.txt  input1.txt  input2.txt
project-1-harrisonoakess/src/project1/: fsm.py  lexer.py
project-1-harrisonoakess/tests/: passoff_utils.py  test_fsm.py  test_lexer.py  test_passoff_100.py  test_passoff_20.py  test_passoff_40.py  test_passoff_60.py  test_passoff_80.py  test_project1.py  test_token.py
project-2-harrisonoakess/: README.md  pyproject.toml
project-2-harrisonoakess/.github/workflows/: classroom.yml
project-2-harrisonoakess/src/project2/: fsm.py  lexer.py  parser.py  project2.py  token.py
project-2-harrisonoakess/tests/: passoff_utils.py  test_datalogprogram.py  test_parser.py  test_passoff_100.py  test_passoff_80.py
project-3-harrisonoakess/: README.md  pyproject.toml
project-3-harrisonoakess/src/project3/: fsm.py  interpreter.py  lexer.py  parser.py  project3.py  relation.py  reporter.py  token.py
project-3-harrisonoakess/tests/: test_interpreter.py  test_passoff.py  test_relation.py  test_reporter.py
project-3-harrisonoakess/tests/resources/project3-passoff/100/: input6.txt  input9.txt
project-3-harrisonoakess/tests/resources/project3-passoff/80/: input0.txt  input2.txt  input3.txt  input4.txt  input7.txt  input8.txt
project-4-harrisonoakess/: .pre-commit-config.yaml  README.md  pyproject.toml
project-4-harrisonoakess/src/project4/: fsm.py  interpreter.py  lexer.py  parser.py  project4.py  reporter.py  token.py
project-4-harrisonoakess/tests/: test_interpreter.py  test_passoff.py  test_relation.py  test_reporter.py
project-4-harrisonoakess/tests/resources/project4-passoff/100/: input1.txt  input3.txt  input6.txt  input7.txt  input8.txt
project-5-harrisonoakess/: pyproject.toml
project-5-harrisonoakess/.github/workflows/: classroom.yml
project-5-harrisonoakess/src/project5/: datalogprogram.py  fsm.py  interpreter.py  lexer.py  parser.py  relation.py
project-5-harrisonoakess/tests/: test_interpreter.py  test_passoff.py  test_relation.py  test_reporter.py
(+1 files in other folders)
