[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "project0"
description = "Training for learning the BYU CS 236 project layouts"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]
project0 = "project0.project0:project0cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "mypy",
  "pre-commit",
]

classroom = [
  "pytest>=8.3.1",
]

[tool.ruff]
target-version = "py312"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/mypy.toml"

[tool.mypy]
exclude = [
  "^test",
]
check_untyped_defs = true
strict = true
